# agent-orchestrator

./: .gitignore  Cargo.toml  LICENSE  README.md  prompt-brainstorm.md  prompt-implementation.md  prompt-synthesis.md  sample-task.md  task.md
.github/workflows/: release.yml
apt/: apt-ftparchive.conf  index.html  public.key
apt/dists/stable/: InRelease  Release  Release.gpg
apt/dists/stable/main/binary-amd64/: Packages
apt/pool/main/a/agent-orchestrator/: agent-orchestrator_0.1.8_amd64.deb
scripts/: build-apt-repo.sh  render-homebrew-formula.sh
src/: artifacts.rs  cli.rs  lib.rs  main.rs  pipeline.rs  progress.rs  prompt.rs  runner.rs
